--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
@@ -30,17 +30,17 @@
                         </div>
                         <div class="details-container">
                             <h3><a [routerLink]="['/question/detail',question.id]">{{question.title}}</a></h3>
-                            <img class="user-image" src="../../../../images/avatar.png" />
-                            <div class="header-info">User name, occupation name </div>
-                            Categories: <h5 *ngFor="let c of question.categories" class="subtitle">{{c?.category.name}},&nbsp; </h5>
+                            <img class="user-image" src="../../../../profile/{{question.userViewModel?.imageUrl}}" />
+                            <div class="header-info">{{question.userViewModel.name}}, {{question.userViewModel.occupation}} </div>
+                            Categories: <h5 *ngFor="let c of question.categories" class="subtitle">{{c?.name}},&nbsp; </h5>
                             <p [innerHTML]="question.lastAnswer?.text.substring(0,200)"></p>
                             <div class="status-panel">
                                 <hr />
                                 <img class="like-logo" src="../images/fade-logo.png" />
-                                <!--<div class="status-line">{{question?.likes?.length}}</div>-->
-                                <div class="status-line">Like</div>
+                                <div class="status-line">{{question?.likes?.length}}</div>
+                                <div class="status-line">Likes</div>
                                 <div class="status-line like-border"></div>
-                                <!--<div class="status-line">{{question?.viewCount}}</div>-->
+                                <div class="status-line">{{question?.viewCount}}</div>
                                 <div class="status-line">Leidos</div>
                                 <a data-toggle="collapse" attr.data-target="#questionComment{{question.id}}" aria-expanded="false">
                                     {{question.comments?.length}} comments
@@ -55,23 +55,23 @@
                         </div>
                         <!-- ======Question Comment==== -->
                         <div class="collapse comment-panel" id="questionComment{{question.id}}">
-                            <div class="comment-input">
+                            <!--<div class="comment-input">
                                 <img class="user-image comment-img" src="../../../../images/avatar.png" />
                                 <input class="form-control" />
                                 <button class="btn btn-info">comment</button>
-                            </div>
-                            <!--<div class="card card-block">
+                            </div>-->
+                            <div class="card card-block">
                             <div *ngFor="let comment of question.comments">
                                 <div class="row">
                                     <div class="article-details" *ngIf="comment">
                                         <img class="user-image comment-img" src="../../../../images/avatar.png" />
-                                        <div class="header-info">{{comment.user.name}},{{date.getMonthName(comment.time.getMonth())}} {{comment.time.getDate()}} {{comment.time.getFullYear()}}</div>
+                                        <div class="header-info">{{comment?.userViewModel.name}}</div><!--,{{date.getMonthName(comment.time.getMonth())}} {{comment.time.getDate()}} {{comment.time.getFullYear()}}-->
                                         <p class="answer-text">{{comment.commentText}}</p>
                                     </div>
                                 </div>
                                 <hr />
                             </div>
-                        </div>-->
+                        </div>
                         </div>
 
                     </div>
