--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -1,6 +1,25 @@
-﻿
+﻿<style>
+    .comment-img {
+        float: left;
+        margin-right: 3px;
+    }
+
+    .comment-input > .form-control {
+        width: 78%;
+        display: inline-block;
+    }
+
+    .comment-panel {
+        margin-left: 2%;
+        margin-top: 10px;
+    }
+
+    .comment-container {
+        display: inline-block;
+    }
+</style>
 <div class="row">
-    <div class="col-md-3">
+    <div class="col-md-3 ">
         <question-left-menu></question-left-menu>
     </div>
     <div class="col-md-8">
@@ -61,10 +80,10 @@
                             <div class="status-panel">
                                 <hr />
                                 <img class="like-logo" src="../images/fade-logo.png" />
-                                <!--<div class="status-line">{{answer.likes?.length}}</div>-->
+                                <div class="status-line">{{answer?.likes?.length}}</div>
                                 <div class="status-line">Like</div>
                                 <div class="status-line like-border"></div>
-                                <!--<div class="status-line">{{answer.comments?.length}}</div>-->
+                                <!--<div class="status-line">{{answer?.comments?.length}}</div>-->
                                 <div class="status-line">Leidos</div>
                                 <a data-toggle="collapse" attr.data-target="#questionComment{{question.id}}" aria-expanded="false">
                                     {{question.comments?.length}} comments
@@ -72,8 +91,8 @@
                                 <!-- social media icon -->
                                 <div class="social-icon">
                                     <img class="social-image" src="../images/facebooklogo.jpg" />
-                                    <img class="social-image" src="../images/twitter.png" />                                    
-                                    <h5>Respuestas</h5><span class="counter-box">{{question.viewCount}}+</span>
+                                    <img class="social-image" src="../images/twitter.png" />
+                                    <h5>Respuestas</h5><span class="counter-box">{{question?.answers?.length}}+</span>
                                 </div>
                             </div>
                         </div>
