bug in apSearch

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
@@ -11,7 +11,7 @@
             </div>-->
             
             <!--&& (this.categoryMatched.length > 0)-->
-            <div class="suggestions" *ngIf="(filteredQuestionList.length > 0) || (this.categoryMatched.length > 0) ">
+            <div class="suggestions" *ngIf="(filteredQuestionList.length > 0) || (categoryMatched.length > 0) ">
                 <ul class="question-List">
                     <li *ngFor="let item of filteredQuestionList">
                         <a (click)="selectQuestionDetails(item)">{{item.title}}</a>
