--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.css
@@ -1,4 +1,7 @@
-﻿
+﻿ .comment-input>.form-control{
+    width:72%;
+    display:inline-block;
+}
 .line-clamp {
   display: -webkit-box;
   -webkit-line-clamp: 3;
