Comment CSS seperate from component

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
@@ -17,6 +17,7 @@
 /*General shared*/
 @import "site/question-panel";
 @import "site/image-border";
+@import "site/comment";
 .right-border{
     border-right:1px solid;
     color:white;
