--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
@@ -1,22 +1,4 @@
-﻿<style>
-    .comment-img{
-    float:left;
-    margin-right:3px;
-}
-    .comment-input>.form-control{
-    width:78%;
-    display:inline-block;
-}
-    .comment-panel{
-    margin-left:5%;
-    margin-top:10px;
-
-}
-    .comment-container{
-    display:inline-block;
-}
-</style>
-<div class="row">
+﻿<div class="row">
     <div class="col-md-3 left-gap"></div>
     <div class="col-md-6">
         <div class="tab" *ngFor="let question of questions">
