--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
@@ -32,7 +32,7 @@
                             <h3><a [routerLink]="['/question/detail',question.id]">{{question.title}}</a></h3>
                             <img class="user-image" src="../../../../profile/{{question.userViewModel?.imageUrl}}" />
                             <div class="header-info">{{question.userViewModel.name}}, {{question.userViewModel.occupation}} </div>
-                            Categories: <h5 *ngFor="let c of question.categories" class="subtitle">{{c?.name}},&nbsp; </h5>
+                            Categories: <h5 *ngFor="let c of question.categories;let i = index; let last = last" class="subtitle">{{c?.name}} <span *ngIf="!last">,&nbsp;</span> </h5>
                             <p [innerHTML]="question.lastAnswer?.text"></p>
                             <div class="status-panel">
                                 <hr />
