--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -25,26 +25,25 @@
                 </tr>
             </table>
         </div>
-        <div class="row read-question-button">            
+        <div class="row read-question-button">
             <button (click)="getQuestionNotAnswered(categorySelected.id)" type="button" class="btn btn-primary outline">
                 <span class="glyphicon glyphicon-question-sign"></span> Question
             </button>
             <button (click)="getQuestionsAnswered(categorySelected.id)" type="button" class="btn btn-primary outline">
                 <span class="glyphicon glyphicon-pencil"></span> Answers
-            </button>                   
+            </button>
         </div>
-         
+
         <div class="clearfix"></div>
         <div infinite-scroll
              [infiniteScrollDistance]="scrollDistance"
              [infiniteScrollThrottle]="throttle"
              (scrolled)="onScrollDown()">
         </div>
-        
-        <div *ngFor="let question of questions">
-        <div class="panel-article">
-            <div class="row">
-                <div class="col-sm-11 questions-container">
+
+        <div *ngFor="let question of questions" class="row">
+            <div class="panel-article">
+                <div class="questions-container">
                     <div class="left-border">
                         <img class="image-border" src="../../../../images/border.png" />
                     </div>
@@ -63,6 +62,7 @@
                                 <div class="status-line">{{answer?.likes?.length}}</div>
                                 <div class="status-line">Like</div>
                                 <div class="status-line like-border"></div>
+
                                 <!--<div class="status-line">{{answer?.comments?.length}}</div>-->
                                 <div class="status-line">Leidos</div>
                                 <a data-toggle="collapse" attr.data-target="#questionComment{{question.id}}" aria-expanded="false">
@@ -74,33 +74,41 @@
                                     <img class="social-image" src="../images/twitter.png" />
                                     <h5>Respuestas</h5><span class="counter-box">{{question?.answers?.length}}+</span>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="collapse comment-panel" id="questionComment{{question.id}}">
-                            <div class="comment-input">
-                                <img class="user-image comment-img" src="../../../../images/avatar.png" />
-                                <input class="form-control" />
-                                <button class="btn btn-info">comment</button>
-                            </div>
-                            <div class="card card-block">
-                                    <div *ngFor="let comment of question.comments">
-                                        <div class="row">
-                                            <div class="article-details" *ngIf="comment">
-                                                <img class="user-image comment-img" src="../../../../images/avatar.png" />
-                                                <div class="header-info">{{comment?.userViewModel?.name}}</div><!--,{{date.getMonthName(comment?.time?.getMonth())}} {{comment?.time?.getDate()}} {{comment?.time?.getFullYear()}}-->
-                                                <p class="answer-text">{{comment?.commentText}}</p>
-                                            </div>
+                                <!-- ======Question Comment==== -->
+                                <div class="collapse comment-panel" id="questionComment{{question.id}}">
+                                    <form #commentForm="ngForm" class="form-horizontal" role="form">
+                                        <div class="comment-input">
+                                            <img class="user-image comment-img" src="../../../../images/avatar.png" />
+                                            <input class="form-control" />
+                                            <button type="button" class="btn btn-primary">comment</button>
                                         </div>
-                                        <hr />
+                                    </form>
+                                    <div class="clearfix"></div>
+                                    <div class="card card-block">
+                                        <div *ngFor="let comment of question.comments">
+                                            <div class="row">
+                                                <div class="article-details" *ngIf="comment">
+                                                    <img class="user-image comment-img" src="../../../../images/avatar.png" />
+                                                    <div class="header-info">{{comment?.userViewModel?.name}}</div>
+
+
+
+                                                    <!--,{{date.getMonthName(comment?.time?.getMonth())}} {{comment?.time?.getDate()}} {{comment?.time?.getFullYear()}}-->
+                                                    <p class=
+                                                    <p class="answer-text">{{comment.commentText}}</p>
+                                                </div>
+                                            </div>
+                                            <hr />
+                                        </div>
                                     </div>
                                 </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-      
+
         <!-- ==========Modal======= -->
         <div class="modal fade" id="myModal" role="dialog">
             <div class="modal-dialog">
