Question home comment spacing fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/layout.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/layout.less
@@ -12,7 +12,9 @@ body {
     overflow-x: hidden;
     overflow-y: auto;
 }
-
+hr{
+    margin:0;
+}
 
 // .row [class*="col-"]{
 //   margin-bottom: -99999px;
