--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
@@ -33,7 +33,7 @@
                                     <a href="https://www.facebook.com/sharer/sharer.php?u={{question.shareUrl}}" 
                                        class="SHARE FACEBOOK" 
                                        onclick='window.open(this.href,"popupwindow", "width=800,height=500,left=200,top=5,scrollbars,toolbar=0,resizable"); return false;' target="social">
-                                       <img class="social-image" src="../images/facebooklogo.jpg" />
+                                        <img class="social-image" src="../images/facebooklogo.jpg" />
                                     </a>
 
                                     <a href="https://twitter.com/home?status={{question.shareUrl}}" class="SHARE TWITTER" 
@@ -45,25 +45,31 @@
                                 </div>
                             </div>
                         </div>
+                        
+
                         <!-- ======Question Comment==== -->
                         <div class="collapse comment-panel" id="questionComment{{question.id}}">
-                            <!--<div class="comment-input">
-                                <img class="user-image comment-img" src="../../../../images/avatar.png" />
-                                <input class="form-control" />
-                                <button class="btn btn-info">comment</button>
-                            </div>-->
-                            <div class="card card-block">
-                            <div *ngFor="let comment of question.comments">
-                                <div class="row">
-                                    <div class="article-details" *ngIf="comment">
-                                        <img class="user-image comment-img" src="../../../../images/avatar.png" />
-                                        <div class="header-info">{{comment?.userViewModel.name}}</div><!--,{{date.getMonthName(comment.time.getMonth())}} {{comment.time.getDate()}} {{comment.time.getFullYear()}}-->
-                                        <p class="answer-text">{{comment.commentText}}</p>
-                                    </div>
+                            <form #commentForm="ngForm" class="form-horizontal" role="form">
+                                <div class="comment-input">
+                                    <!--<div>{{question.id}} </div>-->
+                                    <img class="user-image comment-img" src="../../../../images/avatar.png"/>
+                                    <input class="form-control" [(ngModel)]="commentText" [ngModelOptions]="{standalone: true}" id="comment"/>
+                                    <button type="button" class="btn btn-primary" (click)="submitComment(question.id)">Submit</button>
                                 </div>
-                                <hr />
+                            </form>
+                            <div class="card card-block">
+                                <div *ngFor="let comment of question.comments">
+                                    <div class="row">
+                                        <div class="article-details" *ngIf="comment">
+                                            <img class="user-image comment-img" src="../../../../images/avatar.png" />
+                                            <div class="header-info">{{comment?.user?.name}}</div>
+                                            <!--,{{date.getMonthName(comment?.time?.getMonth())}} {{comment?.time?.getDate()}} {{comment?.time?.getFullYear()}}-->
+                                            <p class="answer-text">{{comment.commentText}}</p>
+                                        </div>
+                                    </div>
+                                    <hr />
+                                </div>
                             </div>
-                        </div>
                         </div>
 
                     </div>
