--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
@@ -82,7 +82,7 @@
                     <div class="comment-input">
                         <img class="user-image comment-img" src="../../../../images/avatar.png" />
                         <input class="form-control" [(ngModel)]="commentText" [ngModelOptions]="{standalone: true}" id="comment" />
-                        <button type="button" class="btn btn-primary" (click)="submitComment(question.id)">Submit</button>
+                        <button type="button" class="btn btn-primary" (click)="submitComment(question.id)">Save</button>
                     </div>
                 </form>
                 <div class="card card-block">
@@ -117,10 +117,9 @@
                     <hr />
                     <img class="like-logo" src="../images/fade-logo.png" />
                     <div class="status-line">{{answer.likes?.length}}</div>
-                    <div class="status-line">Like</div>
+                    <a (click)="submitLikeForAnswer(answer.id)"><div class="status-line">Like</div></a>
                     <div class="status-line like-border"></div>
-                    <div class="status-line">{{answer.comments?.length}}</div>
-                    <div class="status-line">Leidos</div>
+                    <div class="status-line">{{answer.comments?.length}}</div>                   
                     <a data-toggle="collapse" attr.data-target="#answerComment{{answer.id}}" aria-expanded="false" aria-controls="collapseExample">
                         comments
                     </a>
@@ -133,23 +132,25 @@
                 </div>
                 <!-- ======Answer Comment==== -->
                 <div class="collapse comment-panel" id="answerComment{{answer.id}}">
-                    <div class="comment-input">
-                        <img class="user-image comment-img" src="../../../../images/avatar.png" />
-                        <input class="form-control" />
-                        <button class="btn btn-info">comment</button>
-                    </div>
-                    <div class="card card-block">
-                        <div *ngFor="let comment of answer.comments">
-                            <div class="row">
-                                <div class="article-details" *ngIf="comment">
-                                    <img class="user-image comment-img" src="../../../../images/avatar.png" />
-                                    <!--<div class="header-info">{{comment?.user?.name}},{{date.getMonthName(comment?.time?.getMonth())}} {{comment?.time?.getDate()}} {{comment?.time?.getFullYear()}}</div>-->
-                                    <p class="answer-text">{{comment?.commentText}}</p>
-                                </div>
-                            </div>
-                            <hr />
+                    <form #commentAnswerForm="ngForm" class="form-horizontal" role="form">
+                        <div class="comment-input">
+                            <img class="user-image comment-img" src="../../../../images/avatar.png" />
+                            <input class="form-control" [(ngModel)]="commentAnswerText" [ngModelOptions]="{standalone: true}" id="comment" />
+                            <button type="button" class="btn btn-primary" (click)="submitCommentForAnswer(answer.id)">Save</button>
                         </div>
-                    </div>
+                        </form>
+                        <div class="card card-block">
+                            <div *ngFor="let comment of answer.comments">
+                                <div class="row">
+                                    <div class="article-details" *ngIf="comment">
+                                        <img class="user-image comment-img" src="../../../../images/avatar.png" />
+                                        <!--<div class="header-info">{{comment?.user?.name}},{{date.getMonthName(comment?.time?.getMonth())}} {{comment?.time?.getDate()}} {{comment?.time?.getFullYear()}}</div>-->
+                                        <p class="answer-text">{{comment?.commentText}}</p>                              
+                                    </div>
+                                </div>
+                                <hr />
+                            </div>
+                        </div>
                 </div>
             </div>
         </div>
