--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
@@ -18,6 +18,7 @@
 @import "site/question-panel";
 @import "site/image-border";
 @import "site/comment";
+@import "site/userinfo";
 .right-border{
     border-right:1px solid;
     color:white;
