--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -95,7 +95,7 @@
                                             <div class="header-info">{{comment?.userViewModel?.name}}</div>
 
                                             <!--,{{date.getMonthName(comment?.time?.getMonth())}} {{comment?.time?.getDate()}} {{comment?.time?.getFullYear()}}-->
-                                            <p class="answer-text">{{comment.commentText}}</p>
+                                            <p class="comment-text">{{comment.commentText}}</p>
                                         </div>
                                         <hr />
                                     </div>
