--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
@@ -25,7 +25,7 @@
                                 <div class="status-panel">
                                     <img class="like-logo" src="../images/fade-logo.png" />
                                     <div class="status-line">{{question?.likes?.length}}</div>
-                                    <div class="status-line">Likes</div>
+                                    <a (click)="submitLike(question.id)"><div class="status-line">Like</div></a>
                                     <div class="status-line like-border"></div>
                                     <div class="status-line">{{question?.viewCount}}</div>
                                     <div class="status-line">Leidos</div>
