--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -63,8 +63,8 @@
                             <div class="status-panel">
                                 <hr />
                                 <img class="like-logo" src="../images/fade-logo.png" />
-                                <div class="status-line">{{answer?.likes?.length}}</div>
-                                <div class="status-line">Like</div>
+                                <div class="status-line">{{question?.likes?.length}}</div>
+                                <a (click)="submitLike(question.id)"><div class="status-line">Like</div></a>
                                 <div class="status-line like-border"></div>
 
                                 <!--<div class="status-line">{{answer?.comments?.length}}</div>-->
