--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
@@ -40,9 +40,9 @@
                                         {{category.name}}
                                     </option>
                                 </select>
-                                <div [hidden]="category.valid || category.pristine" class="alert alert-danger">
+                                <!--<div [hidden]="category.valid || category.pristine" class="alert alert-danger">
                                     You must select a category for question
-                                </div>
+                                </div>-->
                             </div>
                             <div class="question-components">   
                                 <textarea placeholder="Agrega detalle de tu pregunta - Optional"  [(ngModel)]="body" [ngModelOptions]="{standalone: true}" rows="6" cols="86"></textarea>                             
