--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
@@ -20,7 +20,7 @@
                                 <div class="header-info">{{question.userViewModel.name}}, {{question.userViewModel.occupation}} {{question?.createdOn | date: 'dd MMM, yyyy'}} </div>
                                 Categories: <h5 *ngFor="let c of question.categories;let i = index; let last = last" class="subtitle">{{c?.name}} <span *ngIf="!last">,&nbsp;</span> </h5>
                                 <p [innerHTML]="question.lastAnswer?.text"></p>
-                                <div *ngIf="question.answers[question.answers.length-1]"> by {{question.answers[question.answers.length-1]?.userViewModel?.name}} {{question.answers[question.answers.length-1]?.createdOn | date: 'dd MMM, yyyy'}}</div>
+                                <div *ngIf="question.answers.length!=0"> by {{question.answers[question.answers.length-1]?.userViewModel?.name}} {{question.answers[question.answers.length-1]?.createdOn | date: 'dd MMM, yyyy'}}</div>
                                 <hr />
                                 <div class="status-panel">
                                     <img class="like-logo" src="../images/fade-logo.png" />
