--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
@@ -55,7 +55,7 @@
         </div>-->
         <div class="article-details">
             <img class="user-image" src="../../../../images/avatar.png" />
-            <!--<div class="header-info">{{question?.user?.name}},{{question?.user?.occupassion}}</div>-->
+            <div class="header-info">{{question.userViewModel?.name}}, {{question.userViewModel?.occupation}} {{question?.createdOn | date: 'dd MMM, yyyy'}} </div>
             <!--<div class="header-info">{{date.getMonthName(question.date?.getMonth())}} {{question.date?.getFullYear()}}</div>-->
             <p class="answer-text" [innerHTML]="question.body"></p>
             <div class="status-panel">
@@ -110,7 +110,7 @@
             </div>-->
             <div class="article-details" *ngIf="answer">
                 <img class="user-image " src="../../../../images/avatar.png" />
-                <div class="header-info">{{answer.user?.name}},{{answer.user?.occupassion}}</div>
+                <div class="header-info">{{answer.userViewModel?.name}},{{answer.userViewModel?.occupation}} {{answer?.createdOn | date: 'dd MMM, yyyy'}}</div>
                 <p class="answer-text" [innerHTML]="answer.text"></p>
                 <div class="status-panel">
                     <hr />
