--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/nav/question-nav.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/nav/question-nav.component.html
@@ -26,8 +26,8 @@
             <li><a routerLink="/project">Project</a></li>            
         </ul>
         <ul class="nav navbar-nav navbar-right"  *ngIf="!_logObj.isLoggedIn">
-            <li><a href="#">Log in</a></li>
-            <li><a href="#">Register</a></li>
+            <li><a href="/signin">Log in</a></li>
+            <li><a href="/signin">Register</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right" *ngIf="_logObj.isLoggedIn">
             <li>
