Log in remove(temporary)  from question and  profile

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/dashtab/dashtab.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/dashtab/dashtab.component.html
@@ -1,8 +1,8 @@
 ﻿<div class="tab-bar z-header">
     <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-tab">
-            <li class="nav-home"><a routerLink="/dashboard/viewprofile">View Rrofile</a></li>
-            <li class="nav-home"><a routerLink="/dashboard/editprofile/contact">Edit RPofile</a></li>
+            <li class="nav-home"><a routerLink="/dashboard/viewprofile">View Profile</a></li>
+            <li class="nav-home"><a routerLink="/dashboard/editprofile/contact">Edit Profile</a></li>
             <li class="nav-home"><a routerLink="/">Edit Project</a></li>
             <li class="nav-home"><a routerLink="/">Finance</a></li>
             <li class="nav-home"><a routerLink="/">Edit Settings</a></li>
