--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/navdashboard/navdashboard.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/navdashboard/navdashboard.component.html
@@ -15,7 +15,7 @@
         <ul class="nav navbar-nav">
             <li class="nav-home"><a routerLink="/">Alta Perspectiva</a></li>
         </ul>
-        <ul class="nav navbar-nav navbar-right" *ngIf="!_logObj.isLoggedIn">
+        <!--<ul class="nav navbar-nav navbar-right" *ngIf="!_logObj.isLoggedIn">
             <li><a href="/signin">Log in</a></li>
             <li><a href="/signin">Register</a></li>
         </ul>
@@ -24,7 +24,6 @@
                 <a href="#" class="dropdown-toggle fixed-height" data-toggle="dropdown" aria-expanded="false">
                     <img class="user-image" src="{{_logObj.user.imageUrl}}" />{{_logObj.user.name}}
                 </a>
-                <!-- ======= -->
 
                 <div class="dropdown-menu dropdown-menu-right" role="menu">
                     <form class="form-horizontal" role="form">
@@ -38,9 +37,8 @@
                         </div>
                     </form>
                 </div>
-                <!-- ======== -->
 
             </li>
-        </ul>
+        </ul>-->
     </div>
 </div>
