--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/contact.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/contact.component.html
@@ -11,16 +11,16 @@
                         <label>FIRST NAME*</label>
                         <input type="text" [(ngModel)]="contact.firstName" name="FirstName" class="form-control profile-form">
                     </div>
-                    <div class="col-md-6">
+                    <div class="form-group col-md-6">
                         <label>LAST NAME*</label>
                         <input type="text" [(ngModel)]="contact.lastName" name="lastName" class="form-control profile-form">
                     </div>
                     <!-- ==================== -->
                     <div class="form-group col-md-6">
                         <label>PREFERED E-MAIL*</label>
-                        <input type="email" placeholder="Enter your email" name="email" [(ngModel)]="contact.prefferedEmail" class="form-control profile-form">
+                        <input type="email"  name="email" [(ngModel)]="contact.prefferedEmail" class="form-control profile-form">
                     </div>
-                    <div class="col-md-6">
+                    <div class="form-group col-md-6">
                         <label>PHONE NUMBR</label>
                         <input type="tel" [(ngModel)]="contact.phoneNumber" name="phoneNumber" class="form-control profile-form">
                     </div>
@@ -29,7 +29,7 @@
                         <label>ADDRESS LINE 1*</label>
                         <input type="text" [(ngModel)]="contact.addressLine1" name="addressLine1" class="form-control profile-form">
                     </div>
-                    <div class="col-md-6">
+                    <div class="form-group col-md-6">
                         <label>ADDRESS LINE 2</label>
                         <input type="text" [(ngModel)]="contact.addressLine2" name="addressLine2" class="form-control profile-form">
                     </div>
@@ -38,7 +38,7 @@
                         <label>COUNTRY*</label>
                         <input type="text" [(ngModel)]="contact.country" name="country" class="form-control profile-form">
                     </div>
-                    <div class="col-md-6">
+                    <div class="form-group col-md-6">
                         <label>REGION*</label>
                         <input type="text" [(ngModel)]="contact.region" name="region" class="form-control profile-form">
                     </div>
