modify query for faster loading

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
@@ -19,7 +19,7 @@
 
                                 <div class="header-info">{{question.userViewModel.name}}, {{question.userViewModel.occupation}} {{question?.createdOn | date: 'dd MMM, yyyy'}} </div>
                                 Categories: <h5 *ngFor="let c of question.categories;let i = index; let last = last" class="subtitle">{{c?.name}} <span *ngIf="!last">,&nbsp;</span> </h5>
-                                <p [innerHTML]="question.lastAnswer?.text"></p>
+                                <div><p [innerHTML]="question.lastAnswer?.text"></p><a [routerLink]="['/question/detail',question.id]">Read more..</a></div>
                                 <div *ngIf="question.answers.length!=0"> by {{question.answers[question.answers.length-1]?.userViewModel?.name}} {{question.answers[question.answers.length-1]?.createdOn | date: 'dd MMM, yyyy'}}</div>
                                 <hr />
                                 <div class="status-panel">
